# cornell-db-updater

./: .env  pyproject.toml
cornell_db_updater/: api_types.py  collect.py  config.py
cornell_db_updater/api/: fetch.py  fetch_all.py  types.py
