[tool.poetry]
name = "cornell-db-updater"
version = "0.1.0"
description = ""
authors = ["Ben <Koppe.Development@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.9"
poetry-dotenv-plugin = "^0.2.0"
httpx = "^0.27.0"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
