[tool.poetry]
name = "cornell-db-updater"
version = "0.1.0"
description = ""
authors = ["Ben <Koppe.Development@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.9"
httpx = "^0.27.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
